--- a/singleproduct.html
+++ b/singleproduct.html
@@ -227,7 +227,7 @@
   </div>
   <div class="footerbottom">
     <p> &copy; 2022 <span>AXOCEAN</span> All rights reserved</p>
-    <p>Hand Crafted in Jaipur, Rajasthan</p>
+    <p>Hand Crafted in Addis Ababa, Ethiopia</p>
     
   </div>
   <button class="fas" id="backtotopbutton" onclick="scrolltoTopfunction()">&#8593;</button>
