--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </div>
     <div class="footerbottom">
       <p> &copy; 2022 <span>AXOCEAN</span> All rights reserved</p>
-      <br><p>Hand Crafted in Jaipur, Rajasthan</p>
+      <br><p>Hand Crafted in Addis Ababa, Ethiopia</p>
     </div>
 
   </footer>
